test/known_problems/should_pass/map_optional_keys.erl
-module(map_optional_keys).

-export([m/0]).

-spec m() -> #{foo := atom(), bar => optional}.
m() ->
        #{foo => bar}.
